--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "jsonp": "^0.2.1",
     "material-design-icons-iconfont": "^3.0.3",
     "npm": "^6.4.1",
+    "qs": "^6.5.2",
     "string-mask": "^0.3.0",
     "v-money": "^0.8.1",
     "vee-validate": "^2.1.0-beta.9",
@@ -23,6 +24,7 @@
     "vue-i18n": "^8.1.0",
     "vue-router": "^3.0.1",
     "vuetify": "^1.2.3",
+    "vuetify-confirm": "0.0.6",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
