--- a/package.json
+++ b/package.json
@@ -2,16 +2,21 @@
   "name": "projeto-usj",
   "version": "1.0.0",
   "description": "A Vue.js project",
+  "main": "server.js",
   "author": "André",
   "private": true,
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
-    "start": "npm run dev",
+    "start": "node server.js",
     "build": "node build/build.js"
   },
   "dependencies": {
     "animate.css": "^3.7.0",
     "axios": "^0.18.0",
+    "chart.js": "^2.7.3",
+    "chartkick": "^3.0.1",
+    "express": "^4.16.4",
+    "hchs-vue-charts": "^1.2.8",
     "jsonp": "^0.2.1",
     "material-design-icons-iconfont": "^3.0.3",
     "npm": "^6.4.1",
@@ -20,8 +25,13 @@
     "v-money": "^0.8.1",
     "vee-validate": "^2.1.0-beta.9",
     "vue": "^2.5.2",
+    "vue-animate-number": "^0.4.2",
+    "vue-chart-js": "^1.4.1",
+    "vue-chartjs": "^3.4.0",
+    "vue-chartkick": "^0.5.0",
     "vue-currency-filter": "^3.1.0",
     "vue-i18n": "^8.1.0",
+    "vue-pdf": "^3.3.1",
     "vue-router": "^3.0.1",
     "vuetify": "^1.2.3",
     "vuetify-confirm": "0.0.6",
