--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "axios": "^0.18.0",
     "chart.js": "^2.7.3",
     "chartkick": "^3.0.1",
-    "express": "^4.16.4",
     "hchs-vue-charts": "^1.2.8",
     "jsonp": "^0.2.1",
     "material-design-icons-iconfont": "^3.0.3",
@@ -50,6 +49,7 @@
     "chalk": "^2.0.1",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.0",
+    "express": "^4.16.4",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
@@ -63,6 +63,7 @@
     "postcss-url": "^7.2.1",
     "rimraf": "^2.6.0",
     "semver": "^5.3.0",
+    "serve-static": "^1.13.2",
     "shelljs": "^0.7.6",
     "uglifyjs-webpack-plugin": "^1.1.1",
     "url-loader": "^0.5.8",
