--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "animate.css": "^3.7.0",
     "axios": "^0.18.0",
+    "body-parser": "*",
     "chart.js": "^2.7.3",
     "chartkick": "^3.0.1",
+    "express": "*",
     "hchs-vue-charts": "^1.2.8",
     "jsonp": "^0.2.1",
     "material-design-icons-iconfont": "^3.0.3",
