--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   "dependencies": {
     "animate.css": "^3.7.0",
     "axios": "^0.18.0",
+    "axios-jsonp": "^1.0.2",
     "body-parser": "*",
     "chart.js": "^2.7.3",
     "chartkick": "^3.0.1",
     "express": "*",
     "hchs-vue-charts": "^1.2.8",
+    "jquery": "^3.3.1",
     "jsonp": "^0.2.1",
     "material-design-icons-iconfont": "^3.0.3",
     "npm": "^6.4.1",
@@ -31,6 +33,7 @@
     "vue-chartkick": "^0.5.0",
     "vue-currency-filter": "^3.1.0",
     "vue-i18n": "^8.1.0",
+    "vue-jsonp": "^0.1.8",
     "vue-pdf": "^3.3.1",
     "vue-router": "^3.0.1",
     "vuetify": "^1.2.3",
@@ -40,6 +43,7 @@
   "devDependencies": {
     "autoprefixer": "^7.1.2",
     "babel-core": "^6.22.1",
+    "babel-eslint": "^10.0.1",
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
     "babel-loader": "^7.1.1",
     "babel-plugin-syntax-jsx": "^6.18.0",
@@ -50,6 +54,16 @@
     "chalk": "^2.0.1",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.0",
+    "eslint": "^5.12.1",
+    "eslint-config-prettier": "^4.0.0",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-plugin-html": "^5.0.0",
+    "eslint-plugin-import": "^2.15.0",
+    "eslint-plugin-node": "^8.0.1",
+    "eslint-plugin-prettier": "^3.0.1",
+    "eslint-plugin-promise": "^4.0.1",
+    "eslint-plugin-standard": "^4.0.0",
+    "eslint-plugin-vue": "^5.1.0",
     "express": "^4.16.4",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^1.1.4",
@@ -62,6 +76,7 @@
     "postcss-import": "^11.0.0",
     "postcss-loader": "^2.0.8",
     "postcss-url": "^7.2.1",
+    "prettier": "^1.16.1",
     "rimraf": "^2.6.0",
     "semver": "^5.3.0",
     "serve-static": "^1.13.2",
